--- a/src/index.css
+++ b/src/index.css
@@ -60,17 +60,17 @@ code {
 
 .toggle:hover * {
   opacity: 1;
-  filter: blur(1px);
+  /* filter: blur(1px); */
   transition: 0.3s;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
-  -webkit-transform: rotate(10deg);
+  /* -webkit-transform: rotate(10deg);
   -moz-transform: rotate(10deg);
   -o-transform: rotate(10deg);
   -ms-transform: rotate(10deg);
-  transform: rotate(10deg);
+  transform: rotate(10deg); */
 }
 
 .dimmed {
