--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 0.75em;
+  font-size: 1em;
 }
 
 code {
@@ -25,8 +25,8 @@ code {
 }
 
 .flywall {
-  padding: 0.5em;
-  background-color: #abff32;
+  background-color: green;
+  color: white;
   font-weight: bold;
   -webkit-animation: pulsate 3s ease-out;
   -webkit-animation-iteration-count: infinite;
@@ -35,13 +35,13 @@ code {
 
 @keyframes pulsate {
   0% {
-    opacity: 0.5;
+    opacity: 0.7;
   }
   50% {
     opacity: 1;
   }
   100% {
-    opacity: 0.5;
+    opacity: 0.7;
   }
 }
 
